change web size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
           <li><a href="#our-work-container">Our Work</a></li>
           <li><a href="#contactUs-container">Contact Us</a></li>
           <!-- <li><a href="#order-container"><span>ORDER</span></a></li> -->
-          <span><li><a class="order-button" href="#order-container">ORDER</a></li></span>
+          <span
+            ><li>
+              <a class="order-button" href="#order-container">ORDER</a>
+            </li></span
+          >
         </ul>
       </div>
       <div class="home-content">
@@ -194,20 +198,25 @@
       </div>
     </div>
     <div id="contactUs-container">
+      <h1 class="contactUs-title">Contact <span>Us</span></h1>
+
       <div class="contactUs-content">
-        <h1 class="contactUs-title">Contact <span>Us</span></h1>
         <a href="mailto:info@photorder.net">
           <p class="contactUs-text">
             <img src="assets/contact/gmail-icon.png" />
             info<span class="email">@photorder.net</span>
           </p>
         </a>
+      </div>
+      <div class="contactUs-content">
         <a href="https://www.facebook.com/Photorder">
           <p class="contactUs-text">
             <img src="assets/contact/facebook-icon.png" />
             Photorder
           </p>
         </a>
+      </div>
+      <div class="contactUs-content">
         <a href="https://www.instagram.com/Photorder">
           <p class="contactUs-text">
             <img src="assets/contact/instagram-icon.png" />
